# chip8

./: CMakeLists.txt  build.sh
src/: main.c
src/core/: chip.c  chip.h  stack.c  stack.h
